# OpenGL_CMake_Skeleton

./: CMakeLists.txt  LICENSE  README.md  imgui.ini
src/: Application3D.cpp  Application3D.hpp  RSScanner.cpp  RSScanner.hpp  main.cpp
src/graphic/: Shader.cpp
src/pointcloud/: preview.cpp  preview.hpp
src/system/: Application.cpp  Application.hpp
